# lingmo-config

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  package.yml
cmake/: LingmoCompilerSettings.cmake  LingmoConfigConfig.cmake.in  LingmoPCH.cmake
debian/: changelog  control  copyright  liblingmoconfig-dev.install  liblingmoconfig1.install
include/LingmoConfig/: Config.h  ConfigSchema.h  ConfigWatcher.h  LingmoConfig.h  LingmoConfigExport.h.in  LingmoConfigVersion.h.in
rpm/: lingmo-config.spec
src/: CMakeLists.txt
src/LingmoConfig/: Config.cpp  ConfigSchema.cpp  ConfigWatcher.cpp
src/LingmoConfig/private/: ConfigSchema_p.h  ConfigWatcher_p.h  Config_p.h
tests/: CMakeLists.txt  tst_Config.cpp
